# JI-To-Do-List

./: .gitignore  CMakeLists.txt  JIToDoList.pro  README.md  STYLE.md  cli.cpp  cli.h  fileInput.cpp  fileOutput.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  suggestedList.cpp  suggested_list_generator.cpp  task.cpp  task.h  task_local.txt  test.txt
QtCode/ToDoListGUI/: ToDoListGUI.pro  tasklist.cpp  tasklist.h
QtCode/build-ToDoListGUI-Desktop_Qt_5_12_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
QtCode/build-ToDoListGUI-Desktop_Qt_5_12_2_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  moc_tasklist.cpp
core/: cli.cpp  cryptopp.cpp  cryptopp.h  file.cpp  file.h  fileInput.cpp  fileOutput.cpp  suggestedList.cpp  suggestedList.h  task.cpp  task.h  testCaseSuggestedList.cpp
gui/: layout.cpp  layout.h  mainWindow.cpp  mainWindow.h  mainWindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newDialog.cpp  newDialog.h  newDialog.ui  new_dialog.cpp  new_dialog.h  new_dialog.ui  taskItem.cpp  taskItem.h  tasklist.cpp  tasklist.h
